# AI-Customer-Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  manifest.json  pyproject.toml  rtm_listener.py  settings.py
app/: __init__.py
bot66tornado/: .env.example  .gitignore  README.md  direct-query.js  env-loader.js  platform-switches.test.json
deploy/: README.md  docker-compose.yml  production.env.example
docs/: business-scenario-taxonomy.md  codex-langgraph-polling-first-plan.md  durable-checkpoint-storage-design.md  livechat-webhook.md  mvp-iteration-roadmap.md  next-session-handoff.md  p12-external-result-flow-todo.md  p7-a3-faq-renderer-preview.md  p7-a4-faq-multi-outbound-dry-run.md  p7-a5-outbound-idempotency-shape.md  p7-a7-faq-single-text-closed-loop-smoke.md  p7-a8-llm-shadow-gateway-smoke.md  p8-a-llm-guarded-authoritative-router.md  p8-b-llm-first-faq-direct-answer-blocks.md  p9-a-telegram-sop-closed-loop.md  tenant-runtime-profile-design.md  testing.md
models/: model_manager.py
scripts/: setup_mysql_test_db.sh  smoke_livechat_group23.sh
sql/: 001_inbound_events.sql  002_conversation_states.sql  003_outbound_messages.sql  004_add_workflow_stage.sql  005_external_commands.sql  006_external_command_results.sql  007_add_worker_lease_fields.sql  008_graph_run_errors.sql  009_conversation_messages.sql  010_knowledge_documents.sql  011_graph_checkpoint_metadata.sql  012_add_multimodal_knowledge_fields.sql  013_add_outbound_message_dedup_fields.sql  014_telegram_cases.sql  015_telegram_case_messages.sql  016_telegram_update_offsets.sql  (+3 more)
(+388 files in other folders)
