[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "langchain>=1.3.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-mysql[pymysql]>=3.0.0",
    "mysql-connector-python>=9.7.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "unit: unit tests that do not require external services",
    "integration: integration tests that may require configured services",
    "mysql: tests that require a MySQL test database",
    "replay: deterministic replay tests",
    "slow: slower tests that exercise multi-step workflows",
]
